[40기 - 이정우] 초기환경 세팅 피드백 수정 schema.sql파일 삭제

--- a/leeJungWoo/.gitignore
+++ b/leeJungWoo/.gitignore
@@ -1,6 +1,6 @@
 node_modules/
 .env
-./db/schema.sql
+db/schema.sql
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,webstorm,macos,linux,windows,zsh,node
