--- a/minsik/package.json
+++ b/minsik/package.json
@@ -12,11 +12,14 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dbmate": "^1.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
     "typeorm": "^0.3.10"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
