--- a/YoonEunAe/package.json
+++ b/YoonEunAe/package.json
@@ -18,5 +18,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "typeorm": "^0.3.10"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
